--- a/lang/ru.json
+++ b/lang/ru.json
@@ -43,7 +43,7 @@
   "client.warning.fileAlreadyExists": "⚠️ Файл уже существует.",
   "client.warning.fileWithSameNameExists": "⚠️ Файл с этим именем уже существует, но с другим хэшем.",
   "client.error.filePermissionError": "❌ Нет прав для доступа к файлу.",
-  "client.error.invalidEncryptionKey": "❌ Неверный ключ шифрования. Обычно это происходит из-за включенного VPN на сервере.",
+  "client.error.failedToDecryptData": "❌ Не удалось расшифровать данные.",
 
   "update.info.updateAvailable": "🤩 Вышла новая версия: {}",
   "update.info.confirmUpdate": "👉 Хотите обновиться?",
